added placeholder components for teacher and courses fixed navbar styles

--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -2,4 +2,11 @@
 .header {
   position: relative;
   z-index: 20;
+  background-color: var(--black);
+  margin-bottom: 15px;
+}
+
+.headerBanner {
+  min-height: 100px;
+
 }
