--- a/src/components/NavigationBar/navigationBar.css
+++ b/src/components/NavigationBar/navigationBar.css
@@ -1,3 +1,8 @@
+.navBar {
+  border-radius: 0 !important;
+  margin-top: 0 !important;
+}
+
 .logo {
   text-decoration: none;
 }
@@ -5,3 +10,4 @@
 .logoText {
   color: var(--black);
 }
+
