--- a/src/components/DepartmentSuccess/departmentSuccess.css
+++ b/src/components/DepartmentSuccess/departmentSuccess.css
@@ -1,3 +1,12 @@
+/* stylelint-disable selector-type-no-unknown */
+:root {
+  --date-browse {
+    font-size: small;
+    min-width: 80px;
+    display: inline-block;
+  }
+}
+
 .container {
   display: flex;
   align-items: center;
@@ -49,4 +58,22 @@
   min-height: 25px;
   padding-left: 2px;
   padding-right: 5px;
+}
+
+.dateBrowser {
+  margin-right: 25px;
+  text-align: center;
+}
+
+.selectedDate {
+  @apply --date-browse;
+
+  color: var(--darkSilver);
+  padding-left: 5px;
+  padding-right: 5px;
+}
+.nextDate {
+  @apply --date-browse;
+
+  color: var(--lightGray)
 }
