--- a/src/components/StudentStatistics/studentStatistics.css
+++ b/src/components/StudentStatistics/studentStatistics.css
@@ -1,3 +1,15 @@
-.example {
-  font-style: italic;
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.studentSearch {
+  width: 99%;
+  max-width: 500px;
+}
+
+.searchResultTitle {
+  border-bottom: 1px solid var(--darkSilver);
 }
