optimized student credit accumulation graph a bit added title to chart editet student styles

--- a/src/components/StudentStatistics/studentStatistics.css
+++ b/src/components/StudentStatistics/studentStatistics.css
@@ -3,4 +3,15 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  width: 100%;
+
+}
+
+.title {
+  margin-left: 5px;
+  margin-top: 5px;
+}
+
+.contentSegment {
+  width: 99%;
 }
