- removed constructor binds and moved on to object initalizing

--- a/src/styles/shared/layout.css
+++ b/src/styles/shared/layout.css
@@ -14,7 +14,9 @@
 .contentSegment {
   border: none !important;
   box-shadow: none !important;
+  margin-top: 0 !important;
   width: 100%;
   max-width: 1400px;
   min-width: 600px;
+
 }
