--- a/src/components/PopulationSearchForm/populationSearchForm.css
+++ b/src/components/PopulationSearchForm/populationSearchForm.css
@@ -1,3 +1,35 @@
-.listedDate {
-  margin: 5px 0 0 5px !important;
+.semesterSelection {
+  height: 80px !important;
 }
+.semesterRadio {
+  margin-right: 10px !important;
+  margin-top: 12px !important;
+}
+
+.enrollmentSelectorGroup {
+  align-items: center !important;
+}
+
+.yearSelect {
+  padding-right: 0 !important;
+}
+
+.yearSelectInput input {
+  border-bottom-right-radius: 0 !important;
+  border-top-right-radius: 0 !important;
+}
+
+.yearControl {
+  padding-top: 22px !important;
+  padding-left: 0 !important;
+}
+
+.yearControlButtonGroup {
+  border-bottom-left-radius: 0 !important;
+  border-top-left-radius: 0 !important;
+}
+
+.yearControlButton {
+  font-size: 8px !important;
+}
+
