small refactor on course statistics

--- a/src/components/Courses/courses.css
+++ b/src/components/Courses/courses.css
@@ -3,6 +3,8 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
 .courseSearch {
