--- a/src/components/CourseStatistics/courseStatistics.css
+++ b/src/components/CourseStatistics/courseStatistics.css
@@ -4,3 +4,30 @@
   justify-content: center;
   flex-direction: column;
 }
+
+.enrollmentSelectorGroup {
+  align-items: center !important;
+}
+
+.yearSelect {
+  padding-right: 0 !important;
+}
+
+.yearSelectInput input {
+  border-bottom-right-radius: 0 !important;
+  border-top-right-radius: 0 !important;
+}
+
+.yearControl {
+  padding-top: 22px !important;
+  padding-left: 0 !important;
+}
+
+.yearControlButtonGroup {
+  border-bottom-left-radius: 0 !important;
+  border-top-left-radius: 0 !important;
+}
+
+.yearControlButton {
+  font-size: 8px !important;
+}
