Course yearly stats styles, error message, started "remove course stats"

--- a/src/styles/shared/layout.css
+++ b/src/styles/shared/layout.css
@@ -18,3 +18,10 @@
   max-width: 1400px;
   min-width: 600px;
 }
+
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
