--- a/src/styles/shared/layout.css
+++ b/src/styles/shared/layout.css
@@ -7,7 +7,8 @@
 }
 
 .segmentTitle {
-  margin-top: 5px !important;
+  margin-top: 20px !important;
+  margin-bottom: 20px !important;
 }
 
 .contentSegment {
