--- a/src/components/CourseSearch/courseSearch.css
+++ b/src/components/CourseSearch/courseSearch.css
@@ -3,3 +3,10 @@
   width: 100%;
   max-width: 750px;
 }
+
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
