removed empty style declaration

--- a/src/components/CourseStatistics/CourseTable/courseTable.css
+++ b/src/components/CourseStatistics/CourseTable/courseTable.css
@@ -1,8 +1,5 @@
-.controlIcon, .controlIcon:active {
+.controlIcon,
+.controlIcon:active {
   box-shadow: none !important;
   background: none !important;
-}
-
-.controlIcon {
-
 }
