--- a/src/components/CourseGroups/CourseGroup/courseGroup.css
+++ b/src/components/CourseGroups/CourseGroup/courseGroup.css
@@ -28,6 +28,7 @@
   background: var(--lightSilver);
 }
 
+.courseInfoContent,
 .teacherItemStatistics {
   padding-top: 0.3em;
   padding-bottom: 0.3em;
@@ -53,6 +54,18 @@
   display: flex;
   flex-direction: column;
   flex: 0 0 25%
+}
+
+.courseInfoItem,
+.courseInfoCode {
+  flex: 0 0 10%;
+  text-align: center;
+}
+
+.courseInfoName,
+.courseInfoTeacher {
+  flex: 0 0 33%;
+  text-align: left;
 }
 
 .statisticItem {
