--- a/src/components/CourseGroups/CourseGroup/courseGroup.css
+++ b/src/components/CourseGroups/CourseGroup/courseGroup.css
@@ -52,6 +52,7 @@
   font-weight: 700;
   font-size: 1.075em;
 }
+
 .teacherCount {
   padding-left: 0.25em;
 }
@@ -65,7 +66,7 @@
 .teacherItemBasicInfo {
   display: flex;
   flex-direction: column;
-  flex: 0 0 25%
+  flex: 0 0 25%;
 }
 
 .courseInfoItem,
@@ -99,10 +100,7 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-}
-
-.statisticItem {
-  flex: 0 0 20%
+  flex: 0 0 20%;
 }
 
 .statisticLabel {
