--- a/src/components/CourseGroups/CourseGroup/courseGroup.css
+++ b/src/components/CourseGroups/CourseGroup/courseGroup.css
@@ -41,6 +41,7 @@
 .courseHeaderContent {
   padding-left: 0.5em;
   padding-right: 0.5em;
+  font-size: 1.1em;
 }
 
 .courseHeaderContent > div {
@@ -65,7 +66,7 @@
 .teacherItemBasicInfo {
   display: flex;
   flex-direction: column;
-  flex: 0 0 25%
+  flex: 0 0 33%;
 }
 
 .courseInfoItem,
@@ -84,9 +85,14 @@
 .courseInfoName,
 .courseInfoTeacher,
 .courseHeaderTeacher,
-.courseHeaderName {
+.courseHeaderName,
+.teacherHeaderName {
   flex: 0 0 33%;
   text-align: left;
+}
+
+.teacherHeaderFilter {
+  cursor: default !important;
 }
 
 .statisticControlItem {
@@ -95,24 +101,19 @@
   align-items: center;
 }
 
-.statisticItem {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
-
-.statisticItem {
-  flex: 0 0 20%
-}
-
-.statisticLabel {
-  color: var(--darkSilver);
+.teacherStatisticNumber,
+.teacherHeaderItem {
+  flex: 0 0 20%;
   text-align: center;
 }
 
-.statisticNumber {
-  margin-left: 0.25em;
+.teacherStatisticNumber {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
   font-weight: 600;
+  font-size: 1.25em;
+
 }
 
 .activeToggleContainer {
