Implement populations statistics advanced settings

--- a/src/components/PopulationSearchForm/populationSearchForm.css
+++ b/src/components/PopulationSearchForm/populationSearchForm.css
@@ -1,6 +1,5 @@
-.semesterRadio {
+.populationStatisticsRadio {
   margin-right: 10px !important;
-  padding-top: 22px !important;
 }
 
 .enrollmentSelectorGroup {
