Add arrow to students and teachers search

--- a/src/components/StudentSearch/studentSearch.css
+++ b/src/components/StudentSearch/studentSearch.css
@@ -13,3 +13,11 @@
 .searchResultTitle {
   border-bottom: 1px solid var(--darkSilver);
 }
+
+.clickable {
+  cursor: pointer;
+}
+
+.noLeftBorder {
+  border-left: none !important;
+}
